--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,6 +16,13 @@ jobs:
     - name: Checkout out repo
       uses: actions/checkout@v3
       
+      
+    - name: Install Dependencies
+      run: npm i
+      
+    - name: Run test
+      run: npm run test
+      
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
