--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,40 +7,43 @@ on:
     branches: [ "main" ]
 
 jobs:
-
-  build:
-
+ 
+   build:
+    name: SonarCloud
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout out repo
-      uses: actions/checkout@v3
-      
-      
-    - name: Install Dependencies
-      run: npm i
-      
-    - name: Run test
-      run: npm run test
-      
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-        
-        
-    - name: Build and push Docker images
-      # You may pin to the exact commit or the version.
-      # uses: docker/build-push-action@e551b19e49efd4e98792db7592c17c09b89db8d8
-      uses: docker/build-push-action@v3.0.0
-      with:
-        # Build's context is the set of files located in the specified PATH or URL
-        context: ./
-        # Path to the Dockerfile
-        file: ./Dockerfile
-        push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/saucy-site:latest
-        # Sets the target stage to build
-        target: prod
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Install Dependencies
+        run: npm i
+
+      - name: Run test
+        run: npm run test
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+
+      - name: Build and push Docker images
+        # You may pin to the exact commit or the version.
+        # uses: docker/build-push-action@e551b19e49efd4e98792db7592c17c09b89db8d8
+        uses: docker/build-push-action@v3.0.0
+        with:
+          # Build's context is the set of files located in the specified PATH or URL
+          context: ./
+          # Path to the Dockerfile
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/saucy-site:latest
+          # Sets the target stage to build
+          target: prod
 
